--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<h2>Donuts</h2>
-<app-donuts></app-donuts>
-<h2>Famous People</h2>
-<app-famous-people></app-famous-people>
+<a routerLink="/Donuts">Donuts</a>
+<a routerLink="/Hall of Fame"> Hall of Fame</a>
+<router-outlet></router-outlet>
