--- a/src/app/components/famous-people/famous-people.component.html
+++ b/src/app/components/famous-people/famous-people.component.html
@@ -1,3 +1,4 @@
+<h2>Hall of Fame</h2>
 <table>
     <tr>
         <th>First Name</th>
@@ -7,11 +8,6 @@
     </tr>
 
     @for (p of personResult.complete; track $index) {
-        <tr>
-            <td>{{p.firstName}}</td>
-            <td>{{p.lastName}}</td>
-            <td>{{p.innovation}}</td>
-            <td>{{p.year}}</td>
-        </tr>
+        <tr app-famous-person-item [displayDev]="p"></tr>
     }
 </table>
